static/css/customs.styl
#customs
  margin-bottom 10px
  .custom
    margin-right 0
    padding-right 0
    padding-left 0
    margin-bottom 5px
    display block
    width 100%
    .inputs-container
      display inline-block
      float left
      width 100%
      .input-group
        width 100%
        input
          width 100%
          padding-left 10px !important
        .input-group-addon
          width: 30%
          max-width 200px
          overflow-x scroll
        .custom-types
          display: flex
          flex-direction row
          align-items stretch
          .checkbox-inline
            margin: 0px 0px 0px 0px
            display: flex
            flex-direction row
            justify-content space-between
            input
              margin-left 0px
            span
              margin 0px 5px 0px 20px
    .inputs-container.preferences
      width 90%
    button
      display inline-block
      height 100% !important
      min-height 100% !important
      margin -15px 0px 0px 5px
      padding 5px 8px 5px 8px
      float right
  .button-container
    width 100%
    overflow hidden
    display block
    button.add-custom
      display block
      float right

